# server/docs/swagger.json
@@ -2422,6 +2422,47 @@
                 }
             }
         },
+        "/registry-svc/service-definitions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieves a list of all service definitions or filters them by specific criteria.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Registry Svc"
+                ],
+                "summary": "List Service Definitions",
+                "operationId": "listServiceDefinitions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/registry_svc.ListServiceDefinitionsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid filters",
+                        "schema": {
+                            "$ref": "#/definitions/registry_svc.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/registry_svc.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/registry-svc/service-instance": {
             "put": {
                 "security": [
@@ -2557,7 +2598,7 @@
                     "Registry Svc"
                 ],
                 "summary": "List Service Instances",
-                "operationId": "queryServiceInstances",
+                "operationId": "listServiceInstances",
                 "parameters": [
                     {
                         "type": "string",
